Revert "Fix launch -configuration param to always be proper URI"
This reverts commit e62be0b66a92e07709cea8a13d77ccfd6b99bc47 because it
caused regression, see
https://github.com/eclipse-pde/eclipse.pde/issues/1630