@@ -27,7 +27,9 @@ import static org.osgi.framework.Constants.RESOLUTION_OPTIONAL;
 
 import java.io.File;
 import java.io.InputStream;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
@@ -1050,13 +1052,18 @@ public class PluginBasedLaunchTest extends AbstractLaunchTest {
 	private static final Pattern WHITESPACE = Pattern.compile("\\s+");
 
 	private Path getConfigurationFolder(ILaunchConfigurationWorkingCopy launchConfig)
-			throws CoreException {
+			throws CoreException, MalformedURLException {
 		ILaunch launch = new Launch(launchConfig, ILaunchManager.RUN_MODE, null);
 		var config = new EclipseApplicationLaunchConfiguration();
 		String commandLine = config.showCommandLine(launchConfig, ILaunchManager.RUN_MODE, launch, null);
 		String configURL = WHITESPACE.splitAsStream(commandLine) //
 				.dropWhile(t -> !"-configuration".equals(t)).skip(1).findFirst().get();
-		return Path.of(URI.create(configURL));
+		// The configURL is not properly build, therefore this hack is necessary
+		try {
+			return Path.of(URI.create(configURL));
+		} catch (IllegalArgumentException e) {
+			return Path.of(new URL(configURL).getPath());
+		}
 	}
 
 	private static String getInstallLocation(IPluginModelBase plugin) {
